--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,24 @@
+body {
+    text-align: center;
+}
+
+h1 {
+    font-family: Helvetica;
+    font-size: 70px;
+    color: white;
+    font-weight: bold;
+}
+a {
+    font-family: Helvetica;
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+}
+
 ul {
-    list-style: none;
+     list-style: none;
+}
+
+.image {
+    background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
