--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,15 +1,35 @@
 body {
+    font-family: Helvetica;
     text-align: center;
 }
 
 h1 {
-    font-family: Helvetica;
     font-size: 70px;
     color: white;
     font-weight: bold;
 }
+
+h2 {
+    font-size: 32;
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 23px;
+    color: white;
+    font-weight: bold;
+}
+
+h4 {
+    font-size: 23px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 14px;
+}
+
 a {
-    font-family: Helvetica;
     font-size: 18px;
     color: white;
     font-weight: bold;
