--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,3 +42,10 @@ ul {
 .image {
     background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 }
+
+.footer {
+    text-align: left;
+    font-size: 11px;
+    color: white;
+    background-color: dimgray;
+}
